--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
     <string name="app_name">GithubSearcher</string>
     <string name="type_here">Type here</string>
+    <string name="name">Name:</string>
+    <string name="id">ID:</string>
+    <string name="score">Score:</string>
+    <string name="url">URL:</string>
 </resources>
